style(ProposalBox.module.scss): add height and overflow properties to ensure proper layout and prevent overflow issues in the ProposalBox component

--- a/src/components/proposal/proposal_box/ProposalBox.module.scss
+++ b/src/components/proposal/proposal_box/ProposalBox.module.scss
@@ -7,6 +7,8 @@
     flex-direction: column !important;
     justify-content: space-between !important;
     position: relative;
+    height: 100%;
+    overflow: hidden;
     box-shadow: theme.$box-shadow;
     border: theme.$box-border;
     color: theme.$text-primary;
